# 42

./: .gitignore
FDF_GOOD/: fdf  fdf.h  image.c  math_1.c  read_points.c  windows.c
FdF/: Makefile  delete.c  fdf  fdf.h  gnltest.c  main.c  read_points.c  run.sh  test.ipynb
Fdf2/: Makefile  delete.c  fdf  fdf.h  gnltest.c  main.c  math_1.c  matrix_multiplication.ipynb  read_points.c  test.fdf  test.ipynb  tests.c  windows.c
Fdf3/: Makefile  fdf.h  main.c  read_points.c  windows.c
Libft/: ft_lstiter_bonus.c
Libft2/: Makefile  a.out  ft_atoi.c  ft_memchr.c  ft_memcmp.c  ft_strtrim.c
fdf/: Makefile  fdf  fdf.h  main.c
ft_printf/: .gitignore  \mnt\c\Users\maris\OneDrive\Escritorio\Programacion verano\Data Science\physics\simple_operations\operations1.ipynb  ft_printf.c  ft_printf.h  print_hexadecimal.c  print_number.c  print_text.c
get_next_line/: .gitignore  CMakeLists.txt  a.out  get_next_line.c  get_next_line.h  get_next_line_utils.c  main.c  programa  text.txt
get_next_line_2/: get_next_line  get_next_line.c  get_next_line.h  get_next_line_utils.c  run.sh
minishell/: .gitignore  .gitmodules  Makefile  arg.c  cmd.c  cmd_redir.c  env_utils.c  error.c  exec.c  exec_funcs.c  exec_funcs2.c  exec_utils.c  heredoc.c  literal.c  minishell.c  minishell.h  pipe.c  redir.c  separator.c  signals.c  tab.c  token.c  utils.c  utils2.c  var.c  var_utils.c
philosophers/: Makefile  main.c  philo  philo.c  philo.h  simulation.c  test1.c  util.c
pipex/: Makefile  errors.c  pipex.c  pipex.h  run_command.c  tmp1  tmp2  tmp3  utils.c
push_swap/: Makefile  a.out  main.c  (+22 more)
(+375 files in other folders)
